--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
 		"tailwindcss": "^3.2.4",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"pocketbase": "^0.10.0"
+	}
 }
